= improve Admin UI =
1.added topnav bar on WCP Settings.
2.Update Navigation bar design.
.
= 1.7.2.8 =
1. Added logo position settings on result table propeties.

= 1.7.2.7 =
= Minor Bug fixes =
1.Update JQuery deprecated functions.
2.Fix filter table not showing on Wordpress 5.7.1.
3.Fix More Info fields redirecting to 404 page.
4.Fix Table results not fitted on the screen when resize.
5.Fix swithching table ( when tabular selected horizontal settings should hide).

= 1.7.2.6 =
1. Update deprecated functions
2. Update jQuery framework js files.

= 1.7.2.5 =
1. Improve category column structure.

= 1.7.2.4 =
1.Add options display settings to Categories 1-5 settings.

= 1.7.2.3 =
1. Update plugin update checker.
2. Update authentication token and branch.

= 1.7.2.2 =
1. Re-structure plugin files.
2. Fix hiding notices to WCP Editor Role.
3. Add index.php to plugin folders.
4. Improve fixing of data results table layout.

= 1.7.2.1 =
1. Improve data results table layout.
2. Fix data results table cell width on mobile.

= 1.7.2.0 =
1. Add More Info button outbound clicks tracking functionality.
2. Fix timestamp value on Outbound Clicks table and meta box. 
3. Fix results table cell min-width on small devices.

= 1.6.2.11 =
1. Add support to Multi Rating form submission in the More Info pop-up.
2. Re-calculate rating rank if rating is deleted (Multi Rating Pro).

= 1.6.2.10 =
1. Make More Info button and generated button full width in Tabular View.

= 1.6.2.9 =
1. Add WCP capabilities to administrator role after account creation (if license is active).

= 1.6.2.8 =
1. Show meta key in More Info Settings > Fields list.
2. Move more info content after enquiry button (tabular).

= 1.6.2.7 =
1. Save More Info's Name field type as serialized array.

= 1.6.2.6 =
1. Update saving and retrieving  of list field type (More Info fields).

= 1.6.2.5 =
1. Fix script in adding WCP Data Editor role in Authors dropdown.

= 1.6.2.4 =
1. Add WCP Data Editor role.